--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,12 +20,15 @@ Merriweather - sans
   font-size: 150px;
 }
 
+* {
+  box-sizing: border-box;
+
+}
 
 body {
   background-color: #f6eedf;
   margin: 0;
   text-align: center;
-  box-sizing: border-box;
 }
 
 h1 {
@@ -50,7 +53,9 @@ h2.about {
 h2.creativity-text {
   color: white;
   max-width: 520px;
-  padding:20 0;
+  padding: 20px 0;
+  margin: 0 auto;
+  line-height: 1.4;
 
 }
 
@@ -270,34 +275,242 @@ p.skill-text {
 
 
 
+
 .contact-container {
-  background-color: grey;
+  background-color: lightgrey;
   padding:30px 0;
 }
 
-.flexible-container {
-  resize: horizontal;
-  background-color: blue;
-  width: 300px;
-  height: 100px;
+/* || modular contact card */
+
+
+
+
+
+.card--frame {
+  border-radius: 12px;
+  position: relative;
+  display: block;
+  width: 800px;
+  height: 410px;
+  padding: 4px;
+  border: 0 !important;
+  margin: 0 auto;
+  background-color: var(--theme-lightblue-alt) !important;
+  text-align: left;
+}
+
+.card--inner-pane {
+  position: absolute;
+  width: calc(100% - 8px);
+  height: calc(100% - 8px);
+  border-radius: 8px;
+  background-color: var(--theme-verylightblue);
 }
 
 
-iframe {
-  margin: 50px auto;
-  height: 720px;
-  max-height: 720px;
-  width: 1080px;
-  resize: both;
-  overflow: auto;
-  padding: 15px;
-  background-color: rgb(147, 168, 236);
+
+
+.card-top-section {
+  width: 100%;
+  padding: 20px 30px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom: 1px solid var(--theme-lightblue-alt);
+  background-color: var(--theme-lightblue);
 }
 
-.iframe-wrapper {
-  height: 800px;
+.card-bottom-section {
+  position: relative;
+  width: 100%;
+  height: 67%;
+  padding: 20px 30px;
+}
+
+
+.card-left-section {
+  display: inline-block;
+  width: 67%;
+  height: 100%;
+  padding: 20px 30px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border-right: 1px solid var(--theme-lightblue-alt);
+  background-color: var(--theme-lightblue);
+  position: relative;
+}
+
+.card-left-section img {
+  vertical-align: middle;
+  
   width: 90%;
-  background-color: #222;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+
+}
+
+.card-right-section {
+  display: inline-block;
+  width: calc(33% - 4px);
+  height: 100%;
+
+}
+
+
+
+
+.card-btn-topright {
+  position: absolute;
+  top: -4px;
+  right: -4px;
+  width: 161px;
+  height: 137px;
+  border: 4px solid var(--theme-lightblue-alt);
+  border-bottom-left-radius: 12px;
+  border-top-right-radius: 12px;
+  margin: 0 auto;
+  background-color: var(--theme-lightgreen-alt);
+  font-family: phoreuscherokee, serif;
+  font-size: 36px;
+  font-weight: 700;
+  color: var(--copy-dark);
+  pointer-events: none;
+  transition: background-color .1s ease-out;
+}
+
+.card-btn-topright:hover {
+  background-color: var(--theme-blue);
+  cursor: pointer;
+}
+
+.contact-form * {
+  display: block;
+}
+
+.form-title {
+  margin-bottom: 6px;
+  font-family: iskra, serif;
+  font-size: 20px;
+  font-weight: 400;
+  color: var(--copy-mid);
+}
+
+.form-entry {
+  width: 315px;
+  border: 1px solid var(--theme-lightblue-alt);
+  margin-bottom: 10px;
+  font-family: iskra, sans-serif;
+  font-size: 16px;
+  color: var(--copy-mid);
+}
+
+.form-textarea {
+  width: 100%;
+  height: 150px;
+  border: 1px solid var(--theme-lightblue-alt);
+  margin-bottom: 5px;
+  resize: none;
+}
+
+input:focus {
+  outline: 1px solid var(--theme-blue);
+}
+
+textarea:focus {
+  outline: 1px solid var(--theme-blue);
+}
+
+.hidden-response {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  border-radius: 8px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: var(--theme-verylightblue);
+}
+
+.response-box {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  max-width: 350px;
+  margin: 0 auto;
+}
+
+.response-box p {
+  margin-bottom: 20px;
+  font-family: phoreuscherokee, serif;
+  font-size: 34px;
+  font-weight: 700;
+}
+
+.response-box p:nth-child(1) {
+  margin-bottom: 7px;
+  font-size: 40px;
+}
+
+.response-box p:nth-child(2) {
+  font-size: 26px;
+}
+
+.response-box p:nth-child(3) {
+  margin-bottom: 25px;
+  font-family: iskra, sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.2;
+  letter-spacing: .5px;
+}
+
+.hidden-button {
+  width: 161px;
+  height: 100px;
+  border: 4px solid var(--theme-lightblue-alt);
+  border-radius: 12px;
+  margin: 0 auto;
+  background-color: var(--theme-green);
+  font-family: phoreuscherokee, serif;
+  font-size: 26px;
+  font-weight: 700;
+  color: var(--copy-dark);
+  transition: background-color .1s ease-out;
+}
+
+.hidden-button:hover {
+  background-color: var(--theme-blue);
+  cursor: pointer;
+}
+
+
+
+
+
+:root {
+  --theme-blue: #3fc5f0;
+  --theme-darkblue: #239cc4;
+  --theme-verylightblue: #ebfbff;
+  --theme-lightblue: #ccf2fd;
+  --theme-lightblue-alt: #b0e9ff;
+  --theme-darkgreen: #00d681; /* rgba(109, 236, 185, 1) */
+  --theme-green: #6decb9; /* rgba(109, 236, 185, 1) */
+  --theme-lightgreen: #9bffd7; 
+  --theme-lightgreen-alt: #9cefdb;
+
+  --theme-yellow: #f2f6d0;
+  --theme-lightyellow: #f5f7de;
+  --theme-borders: #3a3b48;
+  --theme-lightborders: #4d4f60;
+  --border-light: #e6e6e6;
+  --primary-background:#ffffff;
+  --secondary-background: #f9f9f9;
+  --copy-light: #b4b4b4;
+  --copy-mid: #6a6a6a;
+  --copy-dark: #3a3b48;
+  --shadow: rgba(0, 0, 0, 0.4);
+  --darken: rgba(0,0,0,0.1);
+  --clear: rgba(0, 0, 0, 0);
+  /*#48899f*/
 }
