--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -105,7 +105,7 @@ p {
 
 }
 
-.invisible-man {
+.avatar {
   margin-bottom: 18px;
   height: 400px;
 }
@@ -193,8 +193,6 @@ p.experience-left {
 
 .remote-img {
   width:200px;
-
-
 }
 
 .pre-educator-container {
@@ -211,26 +209,22 @@ p.experience-left {
 .pre-detail-container {
   height:auto;
   padding:20px;
-
 }
 
 .details-img {
   width:200px;
-
 }
 
 .organization-container {
   padding-top:30px;
   padding-bottom:30px;
   background-color:#543864;
-
 }
 
 p.creativity-text {
   max-width:500px;
   margin-left:auto;
   margin-right:auto;
-
 }
 
 .skills-container {
@@ -241,92 +235,75 @@ p.creativity-text {
   margin-right:auto;
   text-align:center;
   font-size:0;
-
 }
 
 .inner-skill-container {
-  margin-left:auto;
-  margin-right:auto;
-  width:80%;
-  text-align:center;
-  height:auto;
-  margin-top:24px;
-  margin-bottom:10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  text-align: center;
+  height: auto;
+  margin-top: 24px;
+  margin-bottom: 10px;
 
 }
 
 .inner2-skill-container {
-  display:inline-block;
-  font-size:0;
-  width:200px;
-  text-align:center;
-  margin:0 5px;
-  vertical-align:top;
-  height:auto;
+  display: inline-block;
+  font-size: 0;
+  width: 200px;
+  text-align: center;
+  margin: 0 5px;
+  vertical-align: top;
+  height: auto;
 
 }
 
 .skill-row-left {
   width:200px;
-  background-color:lightgrey;
-  height:200px;
-  vertical-align:top;
-  display:table;
+  background-color: lightgrey;
+  height: 200px;
+  vertical-align: top;
+  display: table;
   border-radius:10px;
-
+  padding: 5px;
 }
 
 .skill-row-center {
-  width:200px;
-  background-color:grey;
-  height:200px;
-  vertical-align:top;
-  display:table;
-  border-radius:10px;
+  width: 200px;
+  background-color: lightgrey;
+  height: 200px;
+  vertical-align: top;
+  display: table;
+  border-radius: 10px;
+  padding: 5px;
 
 }
 
 .skill-row-right {
-  border-radius:10px;
-  width:200px;
-  background-color:darkgrey;
-  height:200px;
-  vertical-align:top;
-  font-size:0;
-  display:table;
+  border-radius: 10px;
+  width: 200px;
+  background-color: lightgrey;
+  height: 200px;
+  vertical-align: top;
+  display: table;
+  padding: 5px;
+
 }
 
-p.skill-text {
-  text-align:center;
-  font-size:22px;
-  margin:0;
-  display:table-cell;
-  vertical-align:middle;
+.skill-text {
+  text-align: center;
+  font-size: 20px;
+  display: table-cell;
+  vertical-align: middle;
 }
-
-
-
 
 .contact-container {
   background-color: lightgrey;
-  padding:30px 0;
+  padding: 30px 0;
 }
 
-
-
-
-
-
-
-
  /* || Gallery  */
-
-
-
-
-
-
-
 
 .card--gallery {
   position: relative;
@@ -336,9 +313,8 @@ p.skill-text {
   padding: 8px;
   border: 0 !important;
   margin: 0 auto;
-  background-color:  #222!important;
+  background-color: #222;
   text-align: left;
-  
 }
 
 .card--gallery-inner {
@@ -346,17 +322,12 @@ p.skill-text {
   width: calc(100% - 16px);
   height: calc(100% - 16px);
   background-color: var(--theme-verylightblue);
-  
 }
 
 .card--gallery-inner p {
   font-size: 16px;
   padding: 20px
 }
-
-
-
-
 
 .gallery-img-section {
   position: relative;
@@ -411,19 +382,9 @@ p.skill-text {
   background-position: 10px 172px;
 }
 
-
-button {
+.gallery-btn button {
   outline: none;
-  
 }
-
-
-
-
-
-
-
-
 
 .gallery-right-section {
   position: absolute;
@@ -436,76 +397,36 @@ button {
 
 .gallery-right-section h3 {
   font-size: 22px;
-  }
+}
 
 .gallery-right-section h4 {
-font-size: 20px;
+  font-size: 20px;
 }
 
 .gallery-right-section p {
   font-size: 16px;
 }
 
+.github-btn {
+  position: absolute;
+  bottom: 10px;
+  width: calc(100% - 20px);
+  height: 45px;
+  font-size: 18px;
+}
 
-
-
-
-
-
-/* || modular contact card */
-
-
-
-
+/* || Contact card */
 
 .card--frame {
-  border-radius: 12px;
   position: relative;
   display: block;
-  width: 800px;
+  width: 75%;
   height: 410px;
-  padding: 4px;
-  border: 0 !important;
+  /* border: 1px solid #222; */
   margin: 0 auto;
-  background-color:  var(--theme-lightblue-alt)!important;
+  background-color: var(--theme-verylightblue);
   text-align: left;
 }
-
-.card--inner-pane {
-  position: absolute;
-  width: calc(100% - 8px);
-  height: calc(100% - 8px);
-  border-radius: 8px;
-  background-color: var(--theme-verylightblue);
-}
-
-
-
-
-.card--frame-large {
-  position: relative;
-  display: block;
-  width: 800px;
-  height: 410px;
-  padding: 8px;
-  border: 0 !important;
-  margin: 0 auto;
-  background-color:  #222!important;
-  text-align: left;
-}
-
-.card--inner-pane-large {
-  position: absolute;
-  width: calc(100% - 16px);
-  height: calc(100% - 16px);
-  background-color: var(--theme-verylightblue);
-}
-
-
-
-
-
-
 
 .card-top-section {
   width: 100%;
@@ -521,18 +442,12 @@ font-size: 20px;
   padding: 20px 30px;
 }
 
-
-
-
-
 .card-left-section {
   position: relative;
   display: inline-block;
   width: 67%;
   height: 100%;
   padding: 20px 30px;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
   border-right: 1px solid var(--theme-lightblue-alt);
   background-color: #333;
 }
@@ -557,21 +472,15 @@ font-size: 20px;
   padding: 10px;
 }
 
-
-
-
-
-
 .card-btn-topright {
+  z-index: 90;
   position: absolute;
-  top: -4px;
-  right: -4px;
+  top: 5px;
+  right: 5px;
   width: 161px;
   height: 137px;
-  border: 4px solid var(--theme-lightblue-alt);
-  border-bottom-left-radius: 12px;
-  border-top-right-radius: 12px;
-  margin: 0 auto;
+  border: 14px dotted var(--theme-lightblue);
+  
   background-color: var(--theme-lightgreen-alt);
   font-family: phoreuscherokee, serif;
   font-size: 36px;
@@ -586,24 +495,15 @@ font-size: 20px;
   cursor: pointer;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.stamp-wrap {
+  z-index: 99;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 161px;
+  height: 137px;
+  border: 7px solid var(--theme-lightblue);
+}
 
 
  /* || Contact form styling  */
