--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -611,7 +611,6 @@ textarea:focus {
   left: 0;
   right: 0;
   display: none;
-  border-radius: 8px;
   margin: 0 auto;
   text-align: center;
   background-color: var(--theme-verylightblue);
@@ -627,7 +626,7 @@ textarea:focus {
 
 .response-box p {
   margin-bottom: 20px;
-  font-family: phoreuscherokee, serif;
+  font-family: dinosaur, serif;
   font-size: 34px;
   font-weight: 700;
 }
@@ -643,28 +642,12 @@ textarea:focus {
 
 .response-box p:nth-child(3) {
   margin-bottom: 25px;
-  font-family: iskra, sans-serif;
+  font-family: dinosaur, sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 1.2;
   letter-spacing: .5px;
 }
 
-.hidden-button {
-  width: 161px;
-  height: 100px;
-  border: 4px solid var(--theme-lightblue-alt);
-  border-radius: 12px;
-  margin: 0 auto;
-  background-color: var(--theme-green);
-  font-family: phoreuscherokee, serif;
-  font-size: 26px;
-  font-weight: 700;
-  color: var(--copy-dark);
-  transition: background-color .1s ease-out;
-}
 
-.hidden-button:hover {
-  background-color: var(--theme-blue);
-  cursor: pointer;
-}
+/* END of document */
