adds fix for options box color change problem

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,12 +27,13 @@ Merriweather - sans
   --theme-lightblue-alt: #b0e9ff;
   --theme-darkgreen: #00d681;
   /* rgba(109, 236, 185, 1) */
+  --theme-purple: #543864;
   --theme-green: #6decb9;
   /* rgba(109, 236, 185, 1) */
   --theme-lightgreen: #9bffd7;
   --theme-lightgreen-alt: #9cefdb;
 
-  --theme-yellow: #f2f6d0;
+  --theme-yellow: #ffee69;
   --theme-lightyellow: #f5f7de;
   --theme-borders: #3a3b48;
   --theme-lightborders: #4d4f60;
@@ -537,8 +538,7 @@ p {
   width: 161px;
   height: 137px;
   border: 14px dotted lightblue;
-
-  background-color: var(--theme-lightgreen-alt);
+  background-color: var(--theme-darkgreen);
   font-family: antarctican-mono, sans-serif;
   font-size: 36px;
   font-weight: 700;
@@ -613,7 +613,7 @@ textarea:focus {
   display: none;
   margin: 0 auto;
   text-align: center;
-  background-color: var(--theme-verylightblue);
+  background-color: lightblue;
 }
 
 .response-box {
