added lumberjack gallery

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -251,10 +251,15 @@ p {
   cursor: pointer;
   opacity: .3;
   transition: opacity .2s;
+  
 }
 
 .gallery-btn:hover {
   opacity: 1;
+}
+
+.gallery-btn:focus { 
+  outline: none; 
 }
 
 .g-btn-left {
