--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -283,7 +283,9 @@ p {
 }
 
 .gallery-right-section h3 {
-  font-size: 22px;
+  font-size: 28px;
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 
 .gallery-right-section h4 {
