--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -323,15 +323,15 @@ p {
 /*  Experience Section */
 
 .experience-container {
-  background-color: #222;
+  background-color: #add8e6;
   width: 100%;
 }
 
 .exp-wrap {
   margin: 0 auto;
   padding: 50px 0 40px;
-  width: 80%;
-  background-color: rgb(235, 235, 235);
+  width: 75%;
+  background-color: #ebfbff;
 }
 
 .exp-wrap h2 {
