--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,4 +1,4 @@
-/* || CSS file for "looseleashdog" reset  */
+/* || CSS reset file for Portfolio Site */
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -24,6 +24,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+* {
+	box-sizing: border-box;
+}
 body {
 	line-height: 1;
 }
@@ -42,3 +45,4 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* END of document */
