--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,23 +1,4 @@
-/*--Color Palette
-cream - #f6eedf
-blue -  #084177
-beige - rgb(160, 85, 80)
-dark  - #202040
 
-Alternate
-dark   - #202040
-purple - #543864
-orange - #ff6363
-yellow - #ffbd69
-
-Fonts
-Sacramento - cursive
-Merriweather - sans
-   <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,400;0,700;1,400&family=Sacramento&display=swap" rel="stylesheet">
---*/
-
-
-/* temporary theme colors from lld  */
 
 :root {
   --theme-blue: #3fc5f0;
@@ -26,10 +7,8 @@ Merriweather - sans
   --theme-lightblue: #ccf2fd;
   --theme-lightblue-alt: #b0e9ff;
   --theme-darkgreen: #00d681;
-  /* rgba(109, 236, 185, 1) */
   --theme-purple: #543864;
   --theme-green: #6decb9;
-  /* rgba(109, 236, 185, 1) */
   --theme-lightgreen: #9bffd7;
   --theme-lightgreen-alt: #9cefdb;
 
@@ -46,12 +25,9 @@ Merriweather - sans
   --shadow: rgba(0, 0, 0, 0.4);
   --darken: rgba(0, 0, 0, 0.1);
   --clear: rgba(0, 0, 0, 0);
-  /*#48899f*/
 }
 
-* {
-  box-sizing: border-box;
-}
+
 
 body {
   margin: 0;
@@ -59,54 +35,32 @@ body {
   background-color: #fbf6ed;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0 auto 0;
+  font-family: antarctican-headline, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
 h1 {
   font-family: antarctican-mono, sans-serif;
-  font-weight: 500;
-  font-size: 70px;
   font-style: italic;
-  margin: 0 auto;
+  font-size: 70px;
 }
 
 h2 {
-  margin: 0 auto;
   font-family: antarctican-headline, sans-serif;
-  font-weight: 600;
-  font-style: normal;
-  font-size: 38px;
-  letter-spacing: 2px;
   text-transform: uppercase;
-
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 38px;
 }
 
 h3 {
-  margin: 0 auto 0;
-  font-family: antarctican-headline, sans-serif;
-  font-weight: 700;
-  font-style: normal;
   font-size: 36px;
 }
 
-h4 {
-  margin: 0 auto 0;
-  font-family: antarctican-headline, sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 24px;
-}
-
-h5 {
-  margin: 0 auto 0;
-  font-family: antarctican-headline, sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 24px;
-}
-
-h6 {
-  margin: 0 auto 0;
-  font-family: antarctican-headline, sans-serif;
-  font-weight: 700;
-  font-style: normal;
+h4, h5, h6 {
   font-size: 24px;
 }
 
@@ -118,9 +72,6 @@ p {
   font-size: 20px;
   line-height: 30px;
   color: #353535;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 ul {
@@ -142,10 +93,8 @@ li::marker {
   padding-bottom: 12px!important;
 }
 
-.tech-item {
-  margin-left: -4px!important;
-  position: relative;
-  top: 1px;
+button {
+  cursor: pointer;
 }
 
 /*  General Layout  */
@@ -201,134 +150,14 @@ li::marker {
   width: 200px;
 }
 
-/* Gallery Section */
-
-.gallery-container {
-  padding: 50px 0;
-}
-
-.gallery-container h2 {
-  font-size: 36px;
-  margin-bottom: 50px;
-}
-
-.card--gallery {
-  position: relative;
-  display: block;
-  width: 800px;
-  height: 410px;
-  padding: 8px;
-  border: 0 !important;
-  margin: 0 auto;
-  background-color: #222;
-  text-align: left;
-}
-
-.card--gallery-inner {
-  position: absolute;
-  width: calc(100% - 16px);
-  height: calc(100% - 16px);
-  background-color: rgb(235, 235, 235);
-}
-
-.card--gallery-inner p {
-  font-size: 16px;
-  padding: 20px 20px 20px 25px;
-}
-
-.gallery-img-section {
+.github-link {
   position: relative;
   display: inline-block;
-  width: 67%;
-  height: 100%;
-  padding: 20px 30px;
-  border-right: 1px solid #222;
-  background-color: #333;
+  bottom: -23px;
+  width: 135px;
+  height: 33px;
+  font-size: 14px;
 }
-
-.main-img {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 0;
-  right: 0;
-  display: block;
-  width: 450px;
-  margin: 0 auto;
-}
-
-.gallery-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 37px;
-  height: 394px;
-  padding: 0;
-  border: 0;
-  background-repeat: no-repeat;
-  background-size: 20px 50px;
-  background-color: rgba(0, 0, 0, 0);
-  cursor: pointer;
-  opacity: .3;
-  transition: opacity .2s;
-
-}
-
-.gallery-btn:hover {
-  opacity: 1;
-}
-
-.gallery-btn:focus {
-  outline: none;
-}
-
-.g-btn-left {
-  left: 0px;
-  background-image: url("/images/left-arrow.png");
-  background-position: 7px 172px;
-}
-
-.g-btn-right {
-  right: 0px;
-  background-image: url("/images/right-arrow.png");
-  background-position: 10px 172px;
-}
-
-.gallery-btn button {
-  outline: none;
-}
-
-.gallery-right-section {
-  position: absolute;
-  top: 0;
-  display: inline-block;
-  width: calc(33% - 4px);
-  height: 100%;
-  padding: 10px;
-}
-
-.gallery-right-section h3 {
-  font-size: 28px;
-  font-weight: 600;
-  letter-spacing: 1px;
-}
-
-.gallery-right-section h4 {
-  font-size: 20px;
-}
-
-.gallery-right-section p {
-  font-size: 16px;
-}
-
-.github-btn {
-  position: absolute;
-  bottom: 10px;
-  width: calc(100% - 20px);
-  height: 45px;
-  font-size: 18px;
-}
-
 
 /*  Creativity Banner  */
 
@@ -414,10 +243,6 @@ li::marker {
 .details-img {
   width: 200px;
 }
-
-
-/*  Last Banner  */
-
 
 /*  Skills Section  */
 
@@ -511,231 +336,12 @@ li::marker {
   padding-bottom: 3px;
 }
 
-/*  Contact card */
-
-.contact-container {
-  background-color: #543864;
-  padding: 50px 0;
-}
-
-.contact-container h2 {
-  color: white;
-  margin-bottom: 40px;
-}
-
-
-.card--frame {
-  position: relative;
-  display: block;
-  width: 75%;
-  height: 410px;
-  /* border: 1px solid #222; */
-  margin: 0 auto;
-  background-color: var(--theme-verylightblue);
-  text-align: left;
-}
-
-.card-top-section {
-  width: 100%;
-  padding: 20px 30px;
-  border-bottom: 1px solid var(--theme-lightblue-alt);
-  background-color: lightblue;
-}
-
-.card-bottom-section {
-  position: relative;
-  width: 100%;
-  height: 67%;
-  padding: 20px 30px;
-}
-
-.card-left-section {
-  position: relative;
-  display: inline-block;
-  width: 67%;
-  height: 100%;
-  padding: 20px 30px;
-  border-right: 1px solid var(--theme-lightblue-alt);
-  background-color: #333;
-}
-
-.card-left-section img {
-  width: 450px;
-  margin: 0 auto;
-  display: block;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 0;
-  right: 0;
-}
-
-.card-right-section {
-  position: absolute;
-  top: 0;
-  display: inline-block;
-  width: calc(33% - 4px);
-  height: 100%;
-  padding: 10px;
-}
-
-.card-btn-topright {
-  z-index: 90;
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  width: 161px;
-  height: 137px;
-  border: 14px dotted lightblue;
-  background-color: var(--theme-darkgreen);
-  font-family: antarctican-mono, sans-serif;
-  font-size: 30px;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: var(--copy-dark);
-  pointer-events: none;
-  transition: background-color .1s ease-out;
-}
-
-.card-btn-topright:hover {
-  background-color: var(--theme-blue);
-  cursor: pointer;
-}
-
-.stamp-wrap {
-  z-index: 99;
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  width: 161px;
-  height: 137px;
-  border: 7px solid lightblue;
-  pointer-events: none;
-}
-
-/*  Contact form */
-
-.contact-form * {
-  display: block;
-}
-
-.form-title {
-  margin-bottom: 6px;
-  font-family: dinosaur, sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  color: var(--copy-mid);
-}
-
-.form-entry {
-  width: 315px;
-  border: 1px solid var(--theme-lightblue-alt);
-  margin-bottom: 10px;
-  font-family: dinosaur, sans-serif;
-  font-size: 16px;
-  color: var(--copy-mid);
-}
-
-.form-textarea {
-  width: 100%;
-  height: 150px;
-  border: 1px solid var(--theme-lightblue-alt);
-  margin-bottom: 5px;
-  resize: none;
-}
-
-input:focus {
-  outline: 1px solid var(--theme-blue);
-}
-
-textarea:focus {
-  outline: 1px solid var(--theme-blue);
-}
-
-.hidden-response {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: none;
-  margin: 0 auto;
-  text-align: center;
-  background-color: lightblue;
-}
-
-.response-box {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  display: none;
-  max-width: 350px;
-  margin: 0 auto;
-}
-
-.response-box p {
-  margin-bottom: 20px;
-  font-family: dinosaur, sans-serif;
-  font-size: 34px;
-  font-weight: 700;
-}
-
-.response-box p:nth-child(1) {
-  margin-bottom: 7px;
-  font-size: 40px;
-}
-
-.response-box p:nth-child(2) {
-  font-size: 26px;
-}
-
-.response-box p:nth-child(3) {
-  margin-bottom: 25px;
-  font-family: dinosaur, sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 1.2;
-  letter-spacing: .5px;
-}
-
 /*  Footer  */
 
 footer {
   height: 100px;
   background-color: #222222;
   padding: 20px;
-}
-
-footer p {
-  color: white;
-  text-align: center;
-  font-size: 18px;
-}
-
-footer a {
-  color: #00d681;
-}
-
-.github-link {
-  position: relative;
-  display: inline-block;
-  bottom: -23px;
-  width: 135px;
-  height: 33px;
-  font-size: 14px;
-}
-
-.resume-link {
-  position: relative;
-  display: inline-block;
-  bottom: 10px;
-  width: 150px;
-  height: 35px;
-  font-size: 14px;
-}
-
-button {
-  cursor: pointer;
 }
 
 /* END of document */
