--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,70 +1,40 @@
 /*  Contact card for Portfolio Site */
 
 .contact-container {
-    background-color: #543864;
+    background-color: var(--banner-background);
     padding: 50px 0;
-  }
-  
-  .contact-container h2 {
+}
+
+.contact-container h2 {
     color: white;
     margin-bottom: 40px;
-  }
-  
-  .card--frame {
+}
+
+.card--frame {
     position: relative;
     display: block;
     width: 75%;
     height: 410px;
     margin: 0 auto;
-    background-color: var(--theme-verylightblue);
+    background-color: var(--cool-white-background);
     text-align: left;
-  }
-  
-  .card-top-section {
+}
+
+.card-top-section {
     width: 100%;
     padding: 20px 30px;
-    border-bottom: 1px solid var(--theme-lightblue-alt);
+    border-bottom: 1px solid var(--lightblue-alt);
     background-color: lightblue;
-  }
-  
-  .card-bottom-section {
+}
+
+.card-bottom-section {
     position: relative;
     width: 100%;
     height: 67%;
     padding: 20px 30px;
-  }
-  
-  .card-left-section {
-    position: relative;
-    display: inline-block;
-    width: 67%;
-    height: 100%;
-    padding: 20px 30px;
-    border-right: 1px solid var(--theme-lightblue-alt);
-    background-color: #333;
-  }
-  
-  .card-left-section img {
-    width: 450px;
-    margin: 0 auto;
-    display: block;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 0;
-    right: 0;
-  }
-  
-  .card-right-section {
-    position: absolute;
-    top: 0;
-    display: inline-block;
-    width: calc(33% - 4px);
-    height: 100%;
-    padding: 10px;
-  }
-  
-  .card-btn-topright {
+}
+
+.card-btn-topright {
     z-index: 90;
     position: absolute;
     top: 5px;
@@ -80,14 +50,14 @@
     color: var(--copy-dark);
     pointer-events: none;
     transition: background-color .1s ease-out;
-  }
-  
-  .card-btn-topright:hover {
-    background-color: var(--theme-blue);
+}
+
+.card-btn-topright:hover {
+    background-color: yellow;
     cursor: pointer;
-  }
-  
-  .stamp-wrap {
+}
+
+.stamp-wrap {
     z-index: 99;
     position: absolute;
     top: 5px;
@@ -96,48 +66,48 @@
     height: 137px;
     border: 7px solid lightblue;
     pointer-events: none;
-  }
-  
-  /*  Contact form */
-  
-  .contact-form * {
+}
+
+/*  Contact form */
+
+.contact-form * {
     display: block;
-  }
-  
-  .form-title {
+}
+
+.form-title {
     margin-bottom: 6px;
     font-family: dinosaur, sans-serif;
     font-size: 20px;
     font-weight: 400;
     color: var(--copy-mid);
-  }
-  
-  .form-entry {
+}
+
+.form-entry {
     width: 315px;
-    border: 1px solid var(--theme-lightblue-alt);
+    border: 1px solid var(--lightblue-alt);
     margin-bottom: 10px;
     font-family: dinosaur, sans-serif;
     font-size: 16px;
     color: var(--copy-mid);
-  }
-  
-  .form-textarea {
+}
+
+.form-textarea {
     width: 100%;
     height: 150px;
-    border: 1px solid var(--theme-lightblue-alt);
+    border: 1px solid var(--lightblue-alt);
     margin-bottom: 5px;
     resize: none;
-  }
-  
-  input:focus {
+}
+
+input:focus {
     outline: 1px solid var(--theme-blue);
-  }
-  
-  textarea:focus {
+}
+
+textarea:focus {
     outline: 1px solid var(--theme-blue);
-  }
-  
-  .hidden-response {
+}
+
+.hidden-response {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -147,41 +117,40 @@
     margin: 0 auto;
     text-align: center;
     background-color: lightblue;
-  }
-  
-  .response-box {
+}
+
+.response-box {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
     display: none;
     max-width: 350px;
     margin: 0 auto;
-  }
-  
-  .response-box p {
+}
+
+.response-box p {
     margin-bottom: 20px;
     font-family: dinosaur, sans-serif;
     font-size: 34px;
     font-weight: 700;
-  }
-  
-  .response-box p:nth-child(1) {
+}
+
+.response-box p:nth-child(1) {
     margin-bottom: 7px;
     font-size: 40px;
-  }
-  
-  .response-box p:nth-child(2) {
+}
+
+.response-box p:nth-child(2) {
     font-size: 26px;
-  }
-  
-  .response-box p:nth-child(3) {
+}
+
+.response-box p:nth-child(3) {
     margin-bottom: 25px;
     font-family: dinosaur, sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 1.2;
     letter-spacing: .5px;
-  }
-  
-/* END of document */
+}
 
+/* END of document */
