--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -94,6 +94,16 @@ button {
   background-color: var(--banner-background);
 }
 
+.top {
+  box-shadow: 0 18px 30px -5px #444;
+  border-bottom: solid 3px #383838;
+}
+
+.bottom {
+  box-shadow: 0 -3px 30px 0px #444;
+  border-top: solid 3px #383838;
+}
+
 /*  Avatar Section  */
 
 .top-container {
@@ -116,14 +126,22 @@ button {
 
 .inner-banner-half-cell {
   display: inline-block;
-  width: 40%;
+  width: 50%;
   height: 200px;
   margin: 0;
   vertical-align: top;
 }
 
+.laptop-cell {
+  width: 30%;
+  position: relative;
+  right: 50px;
+}
+
 .laptop-img {
-  width: 200px;
+  width: 210px;
+  position: relative;
+  bottom: 4px;
 }
 
 .about-title {
@@ -132,7 +150,6 @@ button {
 }
 
 .about-text {
-  max-width: 550px;
   text-align: center;
   color: var(--inverted-heading);
   margin-top: 14px;
